--- a/templates/administrator/base.html
+++ b/templates/administrator/base.html
@@ -30,7 +30,9 @@
             <div class="nav-menu">
                 <div class="nav-item-activate">
                     <img src="../../static/image/homepageGreen.png">
-                    <span>首页</span>
+                    <a href="base.html" class="nav-link">
+                        <span class="leftOption" id="Option_bed_information">首页</span>
+                    </a>
                 </div>
 
                 <div class="nav-item">
@@ -40,7 +42,9 @@
 
                 <div class="nav-item">
                     <img src="../../static/image/scheduleGrey.png">
-                    <span>排班表</span>
+                    <a href="schedule.html" class="nav-link">
+                        <span class="leftOption" id="Option_bed_information">排班表</span>
+                    </a>
                 </div>
 
                 <div class="nav-item">
