--- a/templates/counselor/counsel.html
+++ b/templates/counselor/counsel.html
@@ -30,11 +30,15 @@
             <div class="nav-menu">
                 <div class="nav-item">
                     <img src="../../static/image/homepageGrey.png">
-                    <span>首页</span>
+                    <a href="base.html" class="nav-link">
+                        <span class="leftOption" id="Option_bed_information">首页</span>
+                    </a>
                 </div>
                 <div class="nav-item">
                     <img src="../../static/image/logGrey.png">
-                    <span>咨询记录</span>
+                    <a href="history.html" class="nav-link">
+                        <span class="leftOption" id="Option_bed_information">咨询记录</span>
+                    </a>
                 </div>
 
             </div>
