--- a/templates/supervisor/schedule.html
+++ b/templates/supervisor/schedule.html
@@ -31,7 +31,9 @@
             <div class="nav-menu">
                 <div class="nav-item">
                     <img src="../../static/image/homepageGrey.png">
-                    <span>首页</span>
+                    <a href="base.html" class="nav-link">
+                        <span class="leftOption" id="Option_bed_information">首页</span>
+                    </a>
                 </div>
                 <div class="nav-item">
                     <img src="../../static/image/assistanceGrey.png">
@@ -40,12 +42,16 @@
 
                 <div class="nav-item-activate">
                     <img src="../../static/image/scheduleGreen.png">
-                    <span>排班表</span>
+                    <a href="schedule.html" class="nav-link">
+                        <span class="leftOption" id="Option_bed_information">排班表</span>
+                    </a>
                 </div>
 
                 <div class="nav-item">
                     <img src="../../static/image/logGrey.png">
-                    <span>咨询记录</span>
+                    <a href="history.html" class="nav-link">
+                        <span class="leftOption" id="Option_bed_information">咨询记录</span>
+                    </a>
                 </div>
             </div>
 
