--- a/templates/administrator/schedule.html
+++ b/templates/administrator/schedule.html
@@ -31,7 +31,9 @@
             <div class="nav-menu">
                 <div class="nav-item">
                     <img src="../../static/image/homepageGrey.png">
-                    <span>首页</span>
+                    <a href="base.html" class="nav-link">
+                        <span class="leftOption" id="Option_bed_information">首页</span>
+                    </a>
                 </div>
 
                 <div class="nav-item">
@@ -41,7 +43,9 @@
 
                 <div class="nav-item-activate">
                     <img src="../../static/image/scheduleGreen.png">
-                    <span>排班表</span>
+                    <a href="schedule.html" class="nav-link">
+                        <span class="leftOption" id="Option_bed_information">排班表</span>
+                    </a>
                 </div>
 
                 <div class="nav-item">
