--- a/templates/supervisor/base.html
+++ b/templates/supervisor/base.html
@@ -32,7 +32,9 @@
             <div class="nav-menu">
                 <div class="nav-item-activate">
                     <img src="../../static/image/homepageGreen.png">
-                    <span>首页</span>
+                    <a href="base.html" class="nav-link">
+                        <span class="leftOption" id="Option_bed_information">首页</span>
+                    </a>
                 </div>
                 <div class="nav-item">
                     <img src="../../static/image/assistanceGrey.png">
@@ -41,12 +43,16 @@
 
                 <div class="nav-item">
                     <img src="../../static/image/scheduleGrey.png">
-                    <span>排班表</span>
+                    <a href="schedule.html" class="nav-link">
+                        <span class="leftOption" id="Option_bed_information">排班表</span>
+                    </a>
                 </div>
 
                 <div class="nav-item">
                     <img src="../../static/image/logGrey.png">
-                    <span>咨询记录</span>
+                    <a href="history.html" class="nav-link">
+                        <span class="leftOption" id="Option_bed_information">咨询记录</span>
+                    </a>
                 </div>
             </div>
 
