--- a/templates/administrator/base.html
+++ b/templates/administrator/base.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>心理咨询师工作台</title>
     <link rel="stylesheet" type="text/css" href="../../static/css/LeftBar.css">
+    <link rel="stylesheet" type="text/css" href="../../static/css/RightBar.css">
     <link rel="stylesheet" type="text/css" href="../../static/css/Administrator.css">
 
     <script type="text/javascript" src="../../static/js/Schedule.js"></script>
