--- a/templates/counselor/counsel.html
+++ b/templates/counselor/counsel.html
@@ -47,7 +47,9 @@
             <div class="session-list">
                 <span>会话列表</span>
                 <div class="user-item-activate">
-                    <span>张先生</span>
+                    <a href="counsel.html" class="nav-link">
+                        <span class="leftOption" id="Option_bed_information">张先生</span>
+                    </a>
                     <span class="badge">2</span>
                 </div>
                 <div class="user-item">
@@ -139,9 +141,9 @@
                         </div>
 
                         <div class="chat-tools">
-                            <div><img src="image/mic.png"> </div>
-                            <div><img src="image/moji.png"> </div>
-                            <div><img src="image/album.png"> </div>
+                            <div><img src="../../static/image/mic.png"> </div>
+                            <div><img src="../../static/image/moji.png"> </div>
+                            <div><img src="../../static/image/album.png"> </div>
                         </div>
 
                         <div class="chat-footer">
