--- a/templates/administrator/base.html
+++ b/templates/administrator/base.html
@@ -38,7 +38,9 @@
 
                 <div class="nav-item">
                     <img src="../../static/image/logGrey.png">
-                    <span>咨询记录</span>
+                    <a href="history.html" class="nav-link">
+                        <span class="leftOption" id="Option_bed_information">咨询记录</span>
+                    </a>
                 </div>
 
                 <div class="nav-item">
@@ -50,27 +52,20 @@
 
                 <div class="nav-item">
                     <img src="../../static/image/counselorGrey.png">
-                    <span>咨询师管理</span>
+                    <a href="counselorManagement.html" class="nav-link">
+                        <span class="leftOption" id="Option_bed_information">咨询师管理</span>
+                    </a>
                 </div>
 
                 <div class="nav-item">
                     <img src="../../static/image/supervisorGrey.png">
-                    <span>督导管理</span>
+                    <a href="supervisorManagement.html" class="nav-link">
+                        <span class="leftOption" id="Option_bed_information">督导管理</span>
+                    </a>
                 </div>
             </div>
 
-            <!-- 会话列表 -->
-            <div class="session-list">
-                <span>会话列表</span>
-                <div class="user-item">
-                    <span>张先生</span>
-                    <span class="badge">2</span>
-                </div>
-                <div class="user-item">
-                    <span>周小姐</span>
-                    <i class="fas fa-question-circle" style="color: #677489;"></i>
-                </div>
-            </div>
+
         </div>
 
         <div class="RightBar">
