--- a/templates/administrator/schedule.html
+++ b/templates/administrator/schedule.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="../../static/css/Records.css">
     <link rel="stylesheet" type="text/css" href="../../static/css/Supervisor.css">
     <script type="text/javascript" src="../../static/js/generalSchedule.js"></script>
+    <script type="text/javascript" src="../../static/js/ScheduleInfomation.js"></script>
 </head>
 
 <body style="display: flex;">
@@ -38,7 +39,9 @@
 
                 <div class="nav-item">
                     <img src="../../static/image/logGrey.png">
-                    <span>咨询记录</span>
+                    <a href="history.html" class="nav-link">
+                        <span class="leftOption" id="Option_bed_information">咨询记录</span>
+                    </a>
                 </div>
 
                 <div class="nav-item-activate">
@@ -50,27 +53,20 @@
 
                 <div class="nav-item">
                     <img src="../../static/image/counselorGrey.png">
-                    <span>咨询师管理</span>
+                    <a href="counselorManagement.html" class="nav-link">
+                        <span class="leftOption" id="Option_bed_information">咨询师管理</span>
+                    </a>
                 </div>
 
                 <div class="nav-item">
                     <img src="../../static/image/supervisorGrey.png">
-                    <span>督导管理</span>
+                    <a href="supervisorManagement.html" class="nav-link">
+                        <span class="leftOption" id="Option_bed_information">督导管理</span>
+                    </a>
                 </div>
             </div>
 
-            <!-- 会话列表 -->
-            <div class="session-list">
-                <span>会话列表</span>
-                <div class="user-item">
-                    <span>张先生</span>
-                    <span class="badge">2</span>
-                </div>
-                <div class="user-item">
-                    <span>周小姐</span>
-                    <i class="fas fa-question-circle" style="color: #677489;"></i>
-                </div>
-            </div>
+
         </div>
 
         <div class="RightBar">
@@ -86,7 +82,7 @@
                             <h2 class="schedule-title">2023年12月排班表</h2>
                             <p class="schedule-subtitle">本月共31天，需值班17天</p>
                         </div>
-                        <div class="calendar-grid">
+                        <div class="calendar-grid" id="calendar-grid">
                             <!-- 星期标题 -->
                             <div class="day-header">周一</div>
                             <div class="day-header">周二</div>
@@ -109,7 +105,7 @@
                 </div>
                 
                 <div class="status-list">
-                    <div class="currentDate">3月15日 周六</div>
+                    <div class="currentDate" id="currentDate">3月15日 周六</div>
                     <div class="option_container">
                         <div class="option_content-activate">咨询师</div>
                         <div class="option_content">督导</div>
