--- a/templates/counselor/counselDone.html
+++ b/templates/counselor/counselDone.html
@@ -47,7 +47,7 @@
             <div class="session-list">
                 <span>会话列表</span>
                 <div class="user-item-activate">
-                    <a href="counselCarring.html" class="nav-link">
+                    <a href="counsel.html" class="nav-link">
                         <span class="leftOption" id="Option_bed_information">张先生</span>
                     </a>
                     <span class="badge">2</span>
