--- a/templates/counselor/history.html
+++ b/templates/counselor/history.html
@@ -48,7 +48,9 @@
             <div class="session-list">
                 <span>会话列表</span>
                 <div class="user-item">
-                    <span>张先生</span>
+                    <a href="counselCarring.html" class="nav-link">
+                        <span class="leftOption" id="Option_bed_information">张先生</span>
+                    </a>
                     <span class="badge">2</span>
                 </div>
                 <div class="user-item">
