--- a/templates/supervisor/schedule.html
+++ b/templates/supervisor/schedule.html
@@ -59,11 +59,13 @@
             <div class="session-list">
                 <span>会话列表</span>
                 <div class="user-item">
-                    <span>张先生</span>
+                    <a href="counsel.html" class="nav-link">
+                        <span class="leftOption" id="Option_bed_information">咨询师A</span>
+                    </a>
                     <span class="badge">2</span>
                 </div>
                 <div class="user-item">
-                    <span>周小姐</span>
+                    <span>咨询师B</span>
                     <i class="fas fa-question-circle" style="color: #677489;"></i>
                 </div>
             </div>
