--- a/static/css/Modal.css
+++ b/static/css/Modal.css
@@ -31,7 +31,8 @@
 .modal-subtitle {
     margin-bottom: 10px;
     margin-top: 0;
-    font-size: 16px;
+    font-size: 14px;
+    color:#dddddd;
 }
 
 .modal-line {
@@ -132,3 +133,4 @@
 .modal-message-line-character{
     color:#464545;
 }
+
