--- a/static/css/RightBar.css
+++ b/static/css/RightBar.css
@@ -22,10 +22,14 @@
 }
 
 .navBar {
-    height: 6%;
+    height: 5%;
     display: flex;
     align-items: center;
     border: 0 2%;
+    box-shadow: 0 2px 2px 0  rgba(0, 0, 0, 0.1);
+    padding-left:10px;
+    min-width: 120px;
+    margin-bottom: 1px;
 }
 
 .contentBar {
