--- a/templates/administrator/history.html
+++ b/templates/administrator/history.html
@@ -20,7 +20,7 @@
                 <div class="counselor-info">
                     <div class="avatar"></div>
                     <div class="infoBar">
-                        <h3 style="color: #2d4059; font-size: 1.1em;">督导</h3>
+                        <h3 style="color: #2d4059; font-size: 1.1em;">管理员</h3>
                         <p style="color: #677489; font-size: 0.9em;">专业心理咨询</p>
                     </div>
                 </div>
@@ -35,9 +35,12 @@
                         <span class="leftOption" id="Option_bed_information">首页</span>
                     </a>
                 </div>
-                <div class="nav-item">
-                    <img src="../../static/image/assistanceGrey.png">
-                    <span>求助记录</span>
+
+                <div class="nav-item-activate">
+                    <img src="../../static/image/logGreen.png">
+                    <a href="history.html" class="nav-link">
+                        <span class="leftOption" id="Option_bed_information">咨询记录</span>
+                    </a>
                 </div>
 
                 <div class="nav-item">
@@ -47,28 +50,23 @@
                     </a>
                 </div>
 
-                <div class="nav-item-activate">
-                    <img src="../../static/image/logGreen.png">
-                    <a href="history.html" class="nav-link">
-                        <span class="leftOption" id="Option_bed_information">咨询记录</span>
+                <div class="nav-item">
+                    <img src="../../static/image/counselorGrey.png">
+                    <a href="counselorManagement.html" class="nav-link">
+                        <span class="leftOption" id="Option_bed_information">咨询师管理</span>
                     </a>
                 </div>
-            </div>
-            
-            <!-- 会话列表 -->
-            <div class="session-list">
-                <span>会话列表</span>
-                <div class="user-item">
-                    <a href="counsel.html" class="nav-link">
-                        <span class="leftOption" id="Option_bed_information">咨询师A</span>
+
+                <div class="nav-item">
+                    <img src="../../static/image/supervisorGrey.png">
+                    <a href="supervisorManagement.html" class="nav-link">
+                        <span class="leftOption" id="Option_bed_information">督导管理</span>
                     </a>
-                    <span class="badge">2</span>
                 </div>
-                <div class="user-item">
-                    <span>咨询师B</span>
-                    <i class="fas fa-question-circle" style="color: #677489;"></i>
-                </div>
+                
             </div>
+
+
         </div>
 
         <div class="RightBar">
@@ -105,19 +103,26 @@
                     <div class="records-table">
                         <!-- 表头 -->
                         <div class="table-header">
-                            <div>督导</div>
-                            <div>咨询师</div>
-                            <div>求助时长</div>
-                            <div>求助日期</div>
+                            <div>咨询人</div>
+                            <div>咨询时长</div>
+                            <div>咨询日期</div>
+                            <div>咨询评级</div>
                             <div>操作</div>
                         </div>
 
                         <!-- 数据行 -->
                         <div class="table-row">
-                            <div>督导</div>
-                            <div>张先生</div>
+                            <div class="patient-info">
+                                <span>张先生</span>
+                            </div>
                             <div class="duration">00:12:54</div>
                             <div class="date">2020/12/23 12:09:23</div>
+                            <div class="rating">
+                                <div class="star-rating">
+                                    ★★★★★
+                                    <span class="rating-text">很棒的咨询师!</span>
+                                </div>
+                            </div>
                             <div class="actions">
                                 <button class="btn view-detail">查看详情</button>
                                 <button class="btn export">导出记录</button>
