--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 <body>
   <div id="loginInput-container" class="modal-container" style = "display: flex;">
     <div class="modal-content">
-        <h2 class="modal-title">账号登陆</h3>
+        <h2 class="modal-title" style="text-align: center;margin-bottom: 20px;">账号登陆</h2>
         <form method="post">
           <input type="text" id="account-InputBlank" class="modal-input" placeholder="请输入你的账号：" />
           <input type="text" id="password-InputBlank" class="modal-input" placeholder="请输入你的密码：" />
