--- a/templates/supervisor/counsel.html
+++ b/templates/supervisor/counsel.html
@@ -19,7 +19,7 @@
                 <div class="counselor-info">
                     <div class="avatar"></div>
                     <div class="infoBar">
-                        <h3 style="color: #2d4059; font-size: 1.1em;">咨询师</h3>
+                        <h3 style="color: #2d4059; font-size: 1.1em;">督导</h3>
                         <p style="color: #677489; font-size: 0.9em;">专业心理咨询</p>
                     </div>
                 </div>
@@ -35,25 +35,36 @@
                     </a>
                 </div>
                 <div class="nav-item">
+                    <img src="../../static/image/assistanceGrey.png">
+                    <span>求助记录</span>
+                </div>
+
+                <div class="nav-item">
+                    <img src="../../static/image/scheduleGrey.png">
+                    <a href="schedule.html" class="nav-link">
+                        <span class="leftOption" id="Option_bed_information">排班表</span>
+                    </a>
+                </div>
+
+                <div class="nav-item">
                     <img src="../../static/image/logGrey.png">
                     <a href="history.html" class="nav-link">
                         <span class="leftOption" id="Option_bed_information">咨询记录</span>
                     </a>
                 </div>
-
             </div>
 
             <!-- 会话列表 -->
             <div class="session-list">
                 <span>会话列表</span>
                 <div class="user-item-activate">
-                    <a href="counselCarring.html" class="nav-link">
-                        <span class="leftOption" id="Option_bed_information">张先生</span>
+                    <a href="counsel.html" class="nav-link">
+                        <span class="leftOption" id="Option_bed_information">咨询师A</span>
                     </a>
                     <span class="badge">2</span>
                 </div>
                 <div class="user-item">
-                    <span>周小姐</span>
+                    <span>咨询师B</span>
                     <i class="fas fa-question-circle" style="color: #677489;"></i>
                 </div>
             </div>
@@ -116,47 +127,6 @@
                     </div>
 
                     <!-- 聊天内容区域 -->
-                    <div class="chat-content">
-                        <div class="chat-messages" id="messageContainer">
-                            <!-- 消息示例 -->
-                            <div class="message-line">
-                                <div class="message-avatar">
-                                    <img src="texture.png" alt="用户头像">
-                                </div>
-                                <div class="message user-message">
-                                    <div>您好，请问您有什么需要咨询的内容？</div>
-                                    <span class="timestamp">2023/12/01 10:00:00</span>
-                                </div>
-                            </div>
-                            <div class="message-line">
-
-                                <div class="message system-message">
-                                    <div>您好，请问您有什么需要咨询的内容？</div>
-                                    <span class="timestamp">2023/12/01 10:00:00</span>
-                                </div>
-                                <div class="message-avatar">
-                                    <img alt="用户头像">
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="chat-tools">
-                            <div><img src="../../static/image/mic.png"> </div>
-                            <div><img src="../../static/image/moji.png"> </div>
-                            <div><img src="../../static/image/album.png"> </div>
-                        </div>
-
-                        <div class="chat-footer">
-                            <textarea class="message-input" placeholder="输入消息..." id="messageInput" rows="1"></textarea>
-                            <button class="send-button" id="sendButton">
-                                <span>发送</span>
-                                <svg viewBox="0 0 24 24" width="18" height="18">
-                                    <path fill="currentColor" d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z" />
-                                </svg>
-                            </button>
-                        </div>
-                    </div>
-
                     <div class="supervisor-content">
                         <div class="supervisor-section">
                             <div class="supervisor-avatar">
@@ -165,13 +135,17 @@
                             </div>
                             <div class="supervisor-details">
                                 <div class="supervisor-meta">
-                                    <div class="supervisor-status">督导</div>
+                                    <div class="supervisor-status">咨询师</div>
                                     <div class="supervisor-status">正在求助</div>
                                 </div>
                                 <div class="consult-status">
                                     <span class="status-icon">咨询用时:</span>
                                     00：12：13
                                 </div>
+                            </div>
+
+                            <div  class="supervisor-button">
+                                <button class="btn">结束求助</button>
                             </div>
                         </div>
 
@@ -200,6 +174,12 @@
                             
                         </div>
 
+                        <div class="chat-tools">
+                            <div><img src="../../static/image/mic.png"> </div>
+                            <div><img src="../../static/image/moji.png"> </div>
+                            <div><img src="../../static/image/album.png"> </div>
+                        </div>
+
                         <div class="chat-footer">
                             <textarea class="message-input" placeholder="输入消息..." id="messageInput" rows="1"></textarea>
                             <button class="send-button" id="sendButton">
@@ -210,6 +190,35 @@
                             </button>
                         </div>
                     </div>
+
+                    <div class="chat-content">
+                        <div class="chat-messages" id="messageContainer">
+                            <!-- 消息示例 -->
+                            <div class="message-line">
+                                <div class="message-avatar">
+                                    <img src="texture.png" alt="用户头像">
+                                </div>
+                                <div class="message user-message">
+                                    <div>您好，请问您有什么需要咨询的内容？</div>
+                                    <span class="timestamp">2023/12/01 10:00:00</span>
+                                </div>
+                            </div>
+                            <div class="message-line">
+
+                                <div class="message system-message">
+                                    <div>您好，请问您有什么需要咨询的内容？</div>
+                                    <span class="timestamp">2023/12/01 10:00:00</span>
+                                </div>
+                                <div class="message-avatar">
+                                    <img alt="用户头像">
+                                </div>
+                            </div>
+                        </div>
+
+
+                    </div>
+
+                    
                 </div>
             </div>
         </div>
@@ -368,5 +377,5 @@
         </div>
     </div>
 </body>
-
+<script type="text/javascript" src="../../static/js/Chat.js"></script>
 </html>
