--- a/templates/administrator/schedule.html
+++ b/templates/administrator/schedule.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="../../static/css/generalSchedule.css">
     <link rel="stylesheet" type="text/css" href="../../static/css/Records.css">
     <link rel="stylesheet" type="text/css" href="../../static/css/Supervisor.css">
+    <link rel="stylesheet" type="text/css" href="../../static/css/Modal.css">
     <script type="text/javascript" src="../../static/js/generalSchedule.js"></script>
     <script type="text/javascript" src="../../static/js/ScheduleInfomation.js"></script>
 </head>
@@ -107,14 +108,12 @@
                 <div class="status-list">
                     <div class="currentDate" id="currentDate">3月15日 周六</div>
                     <div class="option_container">
-                        <div class="option_content-activate">咨询师</div>
-                        <div class="option_content">督导</div>
+                        <div class="option_content-activate" data-type="counselor">咨询师</div>
+                        <div class="option_content"  data-type="supervisor">督导</div>
                     </div>
-                    <div class="add_operation">添加</div>
-                    <div class="staff-item">
-                        <div class="staff-avatar"></div>
-                        <span>咨询师18</span>
-                        <button class="status-btn remove">移除</button>
+                    <div class="add_operation">添加咨询师</div>
+                    <div class="staff-list">
+                        
                     </div>
                 </div>
 
