--- a/templates/supervisor/counsel.html
+++ b/templates/supervisor/counsel.html
@@ -121,8 +121,14 @@
                         </div>
 
                         <div class="action-buttons">
-                            <button class="btn">请求督导</button>
-                            <button class="btn">结束咨询</button>
+                            <div class="button-container">
+                                <img class="button-image" id="requestIcon" src="../../static/image/lightGreen.png">
+                                <button class="btn" id = "requestHelp" style="color:#1DABA6">请求督导中</button>
+                            </div>
+                            <div class="button-container">
+                                <img class="button-image" src="../../static/image/tickGrey.png">
+                                <button class="btn"  id = "endCounsel">结束咨询</button>
+                            </div>
                         </div>
                     </div>
 
@@ -145,6 +151,7 @@
                             </div>
 
                             <div  class="supervisor-button">
+                                <img src="../../static/image/tickGrey.png">
                                 <button class="btn">结束求助</button>
                             </div>
                         </div>
