--- a/templates/supervisor/history.html
+++ b/templates/supervisor/history.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" type="text/css" href="../../static/css/RightBar.css">
     <link rel="stylesheet" type="text/css" href="../../static/css/Schedule.css">
     <link rel="stylesheet" type="text/css" href="../../static/css/Records.css">
+    <link rel="stylesheet" type="text/css" href="../../static/css/Modal.css">
+    <link rel="stylesheet" type="text/css" href="../../static/css/Counsel.css">
     <script type="text/javascript" src="../../static/js/Schedule.js"></script>
 </head>
 
@@ -105,24 +107,14 @@
                     <div class="records-table">
                         <!-- 表头 -->
                         <div class="table-header">
-                            <div>督导</div>
+                            
                             <div>咨询师</div>
                             <div>求助时长</div>
                             <div>求助日期</div>
                             <div>操作</div>
                         </div>
 
-                        <!-- 数据行 -->
-                        <div class="table-row">
-                            <div>督导</div>
-                            <div>张先生</div>
-                            <div class="duration">00:12:54</div>
-                            <div class="date">2020/12/23 12:09:23</div>
-                            <div class="actions">
-                                <button class="btn view-detail">查看详情</button>
-                                <button class="btn export">导出记录</button>
-                            </div>
-                        </div>
+   
                         <!-- 更多数据行... -->
                     </div>
 
@@ -142,5 +134,5 @@
         </div>
     </div>
 </body>
-
+<script type="text/javascript" src="../../static/js/recentlyCompletedAssistance.js"></script>
 </html>
