--- a/templates/supervisor/base.html
+++ b/templates/supervisor/base.html
@@ -190,18 +190,7 @@
                             <div>操作</div>
                         </div>
 
-                        <!-- 数据行 -->
-                        <div class="table-row">
-                            <div class="patient-info">
-                                <span>张先生</span>
-                            </div>
-                            <div class="duration">00:12:54</div>
-                            <div class="date">2020/12/23 12:09:23</div>
-                            <div class="actions">
-                                <button class="btn view-detail">查看详情</button>
-                                <button class="btn export">导出记录</button>
-                            </div>
-                        </div>
+
                         <!-- 更多数据行... -->
                     </div>
                 </div>
@@ -209,5 +198,5 @@
         </div>
     </div>
 </body>
-
+<script type="text/javascript" src="../../static/js/recentlyCompletedAssistance.js"></script>
 </html>
